[project]
name = "comfyui-local-db"
description = "Store text to Key-Values pair json."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/shinich39/comfyui-local-db"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui-local-db"
Icon = ""
