[project]
name = "comfyui-local-db"
description = "Store text to Key-Value pair database."
version = "1.0.1"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/shinich39/comfyui-local-db"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "shinich39"
DisplayName = "comfyui-local-db"
Icon = ""
